<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addNoteFab"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/previousMonthButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_weight="0"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/previousMonthButtonDesc"
            android:onClick="buttonPressed"
            app:srcCompat="@drawable/ic_baseline_arrow_back_ios_new_24"
            app:tint="@color/purple_500" />

        <TextView
            android:id="@+id/monthYearTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/monthAndYearText"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/nextMonthButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_weight="0"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/nextMonthButtonDesc"
            android:onClick="buttonPressed"
            app:srcCompat="@drawable/ic_baseline_arrow_forward_ios_24"
            app:tint="@color/purple_500" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addNewSleepNoteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        android:contentDescription="@string/addNewSleepNoteButtonDesc"
        android:focusable="true"
        android:onClick="buttonPressed"
        app:layout_constraintBottom_toBottomOf="@+id/frame_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_add_24"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

    <ListView
        android:id="@+id/sleepNotesListView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/frame_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/emptyListTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emptyListText"
        app:layout_constraintBottom_toBottomOf="@+id/sleepNotesListView"
        app:layout_constraintEnd_toEndOf="@+id/sleepNotesListView"
        app:layout_constraintStart_toStartOf="@+id/sleepNotesListView"
        app:layout_constraintTop_toTopOf="@+id/sleepNotesListView" />

    <FrameLayout
        android:id="@+id/frame_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </FrameLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_menu_navigation">

    </com.google.android.material.bottomnavigation.BottomNavigationView>

</androidx.constraintlayout.widget.ConstraintLayout>