<?xml version="1.0" encoding="utf-8"?>
<!--Author: Kerttu-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addNoteFab"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetAlarmsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:isScrollContainer="true"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/sleepTimeTitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14dp"
                android:text="@string/actAddSleepNoteSleepTimeText"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/sleepTimePickerEditText"
                    style="@style/CustomInput"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:autofillHints=""
                    android:background="@drawable/custom_input"
                    android:drawableStart="@drawable/ic_baseline_nights"
                    android:drawablePadding="12dp"
                    android:ems="10"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/actAddSleepNoteSleepTimeInputText"
                    android:inputType="time"
                    android:onClick="buttonPressed"
                    android:padding="12dp"
                    tools:ignore="TextContrastCheck" />

                <Switch
                    android:id="@+id/sleepAlarmSwitch"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    tools:ignore="DuplicateSpeakableTextCheck" />
            </LinearLayout>

            <TextView
                android:id="@+id/wakeTimeTitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:layout_marginBottom="12dp"
                android:text="@string/actAddSleepNoteWakeTimeText"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/wakeTimePickerEditText"
                    style="@style/CustomInput"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:autofillHints=""
                    android:background="@drawable/custom_input"
                    android:drawableStart="@drawable/ic_baseline_alarm"
                    android:drawablePadding="14dp"
                    android:ems="10"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/actAddSleepNoteWakeTimeInputText"
                    android:inputType="time"
                    android:onClick="buttonPressed"
                    android:padding="12dp"
                    tools:ignore="TextContrastCheck" />

                <Switch
                    android:id="@+id/wakeAlarmSwitch"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:onClick="buttonPressed"
        android:text="@string/saveButtonText"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>