<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChartsActivity">

    <!-- BOTTOM MENUNAVIGATION -->
    <FrameLayout
        android:id="@+id/frame_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </FrameLayout>

    <TextView
        android:id="@+id/textMonth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/monthYearText"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_menu_navigation">

    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <!-- COUNTER TEXT -->
    <TextView
        android:id="@+id/avgWakingText"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:text="@string/avgWakingTimeText"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textMonth" />

    <TextView
        android:id="@+id/avgSleepingTimeText"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/avgSleepingTimeText"
        android:textAlignment="center"
        app:layout_constraintBaseline_toBaselineOf="@+id/avgWakingText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/avgWakingText" />

    <TextView
        android:id="@+id/avgSleepHourText"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="70dp"
        android:text="@string/avgSleepHourText"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avgWakingTime" />

    <TextView
        android:id="@+id/wakingCounterText"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/wakingCounterText"
        android:textAlignment="center"
        app:layout_constraintBaseline_toBaselineOf="@+id/avgSleepHourText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/avgSleepHourText" />

    <!-- COUNTER VALUES -->
    <TextView
        android:id="@+id/avgWakingTime"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="6:30"
        android:textAlignment="center"
        android:textSize="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avgWakingText" />

    <TextView
        android:id="@+id/avgSleepingTime"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="23:30"
        android:textAlignment="center"
        android:textSize="25dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/avgWakingTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/avgWakingTime" />

    <TextView
        android:id="@+id/avgSleepHour"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="7h"
        android:textAlignment="center"
        android:textSize="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avgSleepHourText" />

    <TextView
        android:id="@+id/wakingCounter"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="15"
        android:textAlignment="center"
        android:textSize="25dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/avgSleepHour"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/avgSleepHour" />

</androidx.constraintlayout.widget.ConstraintLayout>